--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
             copyBtn.addEventListener('click', copyLink);
             goToCardBtn.addEventListener('click', goToCard);
             backToCreatorBtn.addEventListener('click', backToCreator);
-            retakePhotoBtn.addEventListener('click', retakePhoto);
+            //retakePhotoBtn.addEventListener('click', retakePhoto);
 
             // Старт
             init();
