--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
             transform: scale(1.02);
             box-shadow: 0 12px 20px rgba(180, 139, 90, 0.4);
         }
+        .btn:disabled {
+            background: #d9b999;
+            box-shadow: none;
+            transform: none;
+            cursor: not-allowed;
+            opacity: 0.6;
+        }
         .btn.secondary {
             background: #e6d5b8;
             color: #4a2f1a;
@@ -109,6 +116,10 @@
         }
         .btn.secondary:hover {
             background: #dac29c;
+        }
+        .btn.secondary:disabled {
+            background: #e6d5b8;
+            opacity: 0.5;
         }
 
         .link-area {
@@ -157,7 +168,7 @@
             display: block;
         }
         .photo-section {
-            display: none; /* показывается только после автоснимка */
+            display: none;
         }
         .message-display {
             background: #fff5e6;
@@ -169,6 +180,7 @@
             color: #3b2c1c;
             box-shadow: inset 0 2px 4px rgba(0,0,0,0.05);
             word-break: break-word;
+            display: none; /* скрыто до нажатия "Посмотреть" */
         }
         .error-message {
             color: #b34a4a;
@@ -177,6 +189,7 @@
             border-radius: 30px;
             text-align: center;
             font-weight: 500;
+            display: none;
         }
         .hint-message {
             color: #8b7355;
@@ -203,7 +216,6 @@
             color: #8b7355;
             font-size: 0.9rem;
         }
-        /* Стили для панели эмодзи (горизонтальный скролл) */
         .emoji-panel {
             display: flex;
             flex-wrap: nowrap;
@@ -242,6 +254,20 @@
         .emoji-btn:hover {
             background: #ffe9ce;
             transform: scale(1.1);
+        }
+        .preview-screen {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        #audioContainer {
+            display: none;
+        }
+        /* Кнопка "Сделать открытку" скрыта до показа результата */
+        #backToCreatorBtn {
+            display: none;
         }
     </style>
 </head>
@@ -346,7 +372,7 @@
                 <button class="emoji-btn" data-emoji="💋">💋</button>
             </div>
 
-            <label for="effect">Эффект при селфи</label>
+            <label for="effect">Эффект</label>
             <select id="effect">
                 <option value="confetti" selected>🎉 Конфетти</option>
                 <option value="fireworks">🎆 Фейерверк</option>
@@ -356,7 +382,7 @@
             <label for="music">Ссылка на песню (необязательно)</label>
             <input type="url" id="music" placeholder="https://example.com/song.mp3">
 
-            <button class="btn" id="generateLink">🔗 Создать открытку</button>
+            <button class="btn" id="generateLink" disabled>🔗 Создать открытку</button>
 
             <div class="link-area" id="linkContainer" style="display: none;">
                 <input type="text" id="generatedLink" readonly>
@@ -370,6 +396,11 @@
         <div class="card-panel">
             <h2>💌 Вам открытка</h2>
             <div class="message-display" id="cardMessage"></div>
+
+            <!-- Экран с кнопкой "Посмотреть" (показывается первым) -->
+            <div class="preview-screen" id="previewScreen">
+                <button class="btn" id="viewCardBtn">👀 Посмотреть</button>
+            </div>
 
             <!-- Видео скрыто, используется только для захвата -->
             <div class="video-section">
@@ -389,10 +420,6 @@
 
             <!-- Аудиоплеер (появится, если есть music) -->
             <div id="audioContainer"></div>
-
-            <!-- <div class="btn-group">
-                <button class="btn secondary" id="retakePhotoBtn" style="display: none;">🔄 Сделать новое селфи</button>
-            </div> -->
 
             <button class="btn secondary" id="backToCreatorBtn">💝 Сделать открытку</button>
         </div>
@@ -423,8 +450,10 @@
             const cameraHint = document.getElementById('cameraHint');
             const cameraErrorDiv = document.getElementById('cameraError');
             const audioContainer = document.getElementById('audioContainer');
-            //const retakePhotoBtn = document.getElementById('retakePhotoBtn');
             const backToCreatorBtn = document.getElementById('backToCreatorBtn');
+            // Новые элементы
+            const previewScreen = document.getElementById('previewScreen');
+            const viewCardBtn = document.getElementById('viewCardBtn');
 
             // --- Состояние ---
             let currentStream = null;
@@ -436,10 +465,9 @@
             // --- Чтение параметров URL с ручной заменой + на пробел (для старых браузеров) ---
             function getUrlParams() {
                 const params = new URLSearchParams(window.location.search);
-                // Для message делаем замену + на пробел, т.к. некоторые браузеры не декодируют + автоматически
                 let message = params.get('message');
                 if (message) {
-                    message = message.replace(/\+/g, ' '); // заменяем все + на пробел
+                    message = message.replace(/\+/g, ' ');
                 } else {
                     message = '';
                 }
@@ -463,14 +491,12 @@
 
             // --- Остановка камеры ---
             function stopCamera() {
-                // Останавливаем треки, если есть
                 if (currentStream) {
                     currentStream.getTracks().forEach(track => {
-                        try { track.stop(); } catch (e) { /* ignore */ }
+                        try { track.stop(); } catch (e) { }
                     });
                     currentStream = null;
                 }
-                // Очищаем video элемент и приостанавливаем его
                 try {
                     if (video) {
                         video.pause();
@@ -491,14 +517,13 @@
 
             // --- Запуск постоянного эффекта: конфетти сверху + случайные взрывы ---
             function startContinuousEffect(effectType) {
-                stopEffect(); // остановить предыдущий
+                stopEffect();
 
-                // Вспомогательная функция для вызова confetti с случайным x
                 const fire = (options = {}) => {
                     confetti({
                         ...options,
                         origin: {
-                            x: options.origin?.x ?? Math.random(), // случайный x, если не задан
+                            x: options.origin?.x ?? Math.random(),
                             y: options.origin?.y ?? 0
                         },
                         spread: options.spread || 100,
@@ -507,9 +532,7 @@
 
                 switch (effectType) {
                     case 'fireworks':
-                        // Каждые 400 мс: один залп сверху, один взрыв в случайном месте
                         effectInterval = setInterval(() => {
-                            // сверху
                             fire({
                                 particleCount: 30,
                                 spread: 90,
@@ -517,19 +540,17 @@
                                 colors: ['#ff4d4d', '#ff9f4d', '#ffff4d', '#4dff4d', '#4dffff', '#4d4dff'],
                                 origin: { y: 0 }
                             });
-                            // случайный взрыв
                             fire({
                                 particleCount: 60,
                                 spread: 120,
                                 startVelocity: 40,
                                 colors: ['#ff4d4d', '#ff9f4d', '#ffff4d', '#4dff4d', '#4dffff', '#4d4dff'],
-                                origin: { y: 0.2 + Math.random() * 0.6 } // в центре или нижней части
+                                origin: { y: 0.2 + Math.random() * 0.6 }
                             });
                         }, 400);
                         break;
                     case 'stars':
                         effectInterval = setInterval(() => {
-                            // мерцающие звёзды сверху
                             fire({
                                 particleCount: 20,
                                 spread: 80,
@@ -539,7 +560,6 @@
                                 gravity: 0.2,
                                 origin: { y: 0 }
                             });
-                            // вспышка звёзд в случайном месте
                             fire({
                                 particleCount: 40,
                                 spread: 100,
@@ -554,7 +574,6 @@
                     case 'confetti':
                     default:
                         effectInterval = setInterval(() => {
-                            // обычное конфетти сверху
                             fire({
                                 particleCount: 40,
                                 spread: 80,
@@ -563,7 +582,6 @@
                                 gravity: 0.5,
                                 origin: { y: 0 }
                             });
-                            // дополнительная вспышка конфетти в случайном месте
                             fire({
                                 particleCount: 30,
                                 spread: 110,
@@ -586,31 +604,32 @@
                 photoCanvas.height = video.videoHeight;
                 ctx.drawImage(video, 0, 0, photoCanvas.width, photoCanvas.height);
 
-                // Показываем фото
+                // Показываем фото и скрываем экран предпросмотра
                 photoSection.style.display = 'block';
-                //retakePhotoBtn.style.display = 'inline-block';
+                previewScreen.style.display = 'none';
+                cardMessageDiv.style.display = 'block';
+                // Показываем кнопку "Сделать открытку"
+                backToCreatorBtn.style.display = 'inline-block';
 
-                // Запускаем постоянный эффект (сверху + взрывы)
+                // Если есть музыка, создаём аудио и пытаемся воспроизвести
+                if (musicParam) {
+                    // Очищаем контейнер на случай, если там что-то было
+                    audioContainer.innerHTML = '';
+                    const audio = document.createElement('audio');
+                    audio.controls = true;
+                    audio.preload = 'auto';
+                    audio.src = musicParam;
+                    audioContainer.appendChild(audio);
+                    audioContainer.style.display = 'block';
+                    // Пытаемся воспроизвести
+                    tryAutoplayAudio(audio);
+                }
+
+                // Запускаем постоянный эффект
                 startContinuousEffect(effectParam);
 
-                // Останавливаем камеру сразу после селфи
+                // Останавливаем камеру
                 stopCamera();
-            }
-
-            // --- Подготовка к повторному селфи ---
-            function retakePhoto() {
-                // Останавливаем эффект, скрываем фото
-                stopEffect();
-                photoSection.style.display = 'none';
-                //retakePhotoBtn.style.display = 'none';
-                autoPhotoTaken = false; // разрешаем новый автоснимок
-
-                // Видео должно быть активно, но если поток пропал – перезапустим камеру
-                if (!currentStream || !currentStream.active) {
-                    startCamera().then(() => waitForVideoAndTakePhoto());
-                } else {
-                    waitForVideoAndTakePhoto();
-                }
             }
 
             // --- Ожидание готовности видео и автоснимок ---
@@ -636,24 +655,25 @@
             // --- Запуск камеры (видео скрыто) ---
             async function startCamera() {
                 stopCamera();
-                // Показываем подсказку перед запросом
                 cameraHint.style.display = 'block';
                 cameraErrorDiv.style.display = 'none';
                 try {
                     const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: false });
                     currentStream = stream;
                     video.srcObject = stream;
-                    // Камера получена – подсказку убираем
                     cameraHint.style.display = 'none';
                 } catch (err) {
                     console.error('Ошибка камеры:', err);
                     cameraErrorDiv.style.display = 'block';
                     cameraErrorDiv.textContent = 'Не удалось получить доступ к камере. Проверьте разрешения.';
-                    cameraHint.style.display = 'none'; // подсказку тоже убираем
+                    cameraHint.style.display = 'none';
+                    // В случае ошибки скрываем previewScreen и показываем сообщение об ошибке,
+                    // но оставляем кнопку "Создать открытку" видимой.
+                    previewScreen.style.display = 'none';
                 }
             }
 
-            // --- Улучшенная функция для попытки автозапуска аудио с отложенным запуском по клику ---
+            // --- Функция для попытки автозапуска аудио с отложенным запуском по клику ---
             function tryAutoplayAudio(audioElement) {
                 if (!audioElement) return;
 
@@ -662,11 +682,9 @@
                 if (playPromise !== undefined) {
                     playPromise.catch(error => {
                         console.log('Autoplay заблокирован, ждём действия пользователя:', error);
-                        // Запоминаем, что это аудио нужно запустить при первом клике
                         if (!window._pendingAudios) window._pendingAudios = [];
                         window._pendingAudios.push(audioElement);
 
-                        // Добавляем обработчик на первый клик, если ещё не добавлен
                         if (!window._firstClickHandlerAdded) {
                             window._firstClickHandlerAdded = true;
                             document.addEventListener('click', function firstClickHandler() {
@@ -683,37 +701,38 @@
                 }
             }
 
-            // --- Инициализация страницы открытки ---
+            // --- Инициализация страницы открытки (только подготовка, без запуска камеры) ---
             async function initCardMode() {
                 const params = getUrlParams();
                 cardMessageDiv.textContent = params.message || 'Поздравляю!';
                 effectParam = params.effect;
-                musicParam = params.music;
+                musicParam = params.music; // просто сохраняем ссылку
 
-                // Плеер для музыки с autoplay
+                // Очищаем контейнер аудио (на случай, если были предыдущие)
                 audioContainer.innerHTML = '';
-                if (musicParam) {
-                    const audio = document.createElement('audio');
-                    audio.controls = true;
-                    audio.autoplay = true;
-                    audio.preload = 'auto'; // загружаем заранее
-                    audio.src = musicParam;
-                    audioContainer.appendChild(audio);
-                    tryAutoplayAudio(audio);
-                }
+                audioContainer.style.display = 'none';
 
-                // Сброс UI
+                // Скрываем все элементы, кроме previewScreen
                 photoSection.style.display = 'none';
-                //retakePhotoBtn.style.display = 'none';
-                stopEffect();
-                autoPhotoTaken = false;
+                cardMessageDiv.style.display = 'none';
                 cameraHint.style.display = 'none';
                 cameraErrorDiv.style.display = 'none';
+                previewScreen.style.display = 'flex'; // показываем кнопку
+                // Кнопка "Сделать открытку" скрыта до показа результата
+                backToCreatorBtn.style.display = 'none';
 
-                // Запускаем камеру (видео скрыто)
+                // Сбрасываем флаги
+                stopEffect();
+                autoPhotoTaken = false;
+            }
+
+            // --- Обработчик нажатия "Посмотреть" ---
+            async function onViewCard() {
+                // Скрываем previewScreen (он исчезнет, но мы покажем подсказки камеры)
+                previewScreen.style.display = 'none';
+                // Запускаем камеру
                 await startCamera();
-
-                // Если камера запущена, ждём готовности и делаем автоснимок
+                // Если камера запустилась без ошибок, ждём готовности и делаем снимок
                 if (cameraErrorDiv.style.display !== 'block') {
                     waitForVideoAndTakePhoto();
                 }
@@ -725,6 +744,12 @@
                 const effect = effectSelect.value;
                 const music = musicInput.value.trim();
 
+                // Дополнительная проверка на пустое сообщение
+                if (!message) {
+                    alert('Пожалуйста, введите поздравление');
+                    return;
+                }
+
                 const params = new URLSearchParams();
                 if (message) params.set('message', message);
                 params.set('effect', effect);
@@ -734,6 +759,12 @@
                 generatedLinkInput.value = url;
                 linkContainer.style.display = 'flex';
                 goToCardBtn.style.display = 'inline-block';
+            }
+
+            // --- Проверка заполненности поля сообщения и обновление состояния кнопки ---
+            function updateGenerateButtonState() {
+                const message = messageInput.value.trim();
+                generateBtn.disabled = message === '';
             }
 
             // --- Копирование ссылки ---
@@ -767,7 +798,8 @@
                 const text = messageInput.value;
                 const newText = text.substring(0, start) + emoji + text.substring(end);
                 messageInput.value = newText;
-                // Восстанавливаем позицию курсора после вставленного эмодзи
+                // После вставки эмодзи обновляем состояние кнопки
+                updateGenerateButtonState();
                 messageInput.selectionStart = messageInput.selectionEnd = start + emoji.length;
                 messageInput.focus();
             }
@@ -785,6 +817,8 @@
                     musicInput.value = '';
                     linkContainer.style.display = 'none';
                     goToCardBtn.style.display = 'none';
+                    // Обновляем состояние кнопки (она будет disabled, так как поле пустое)
+                    updateGenerateButtonState();
                 }
 
                 // Обработчики для кнопок эмодзи
@@ -794,6 +828,9 @@
                         insertEmoji(emoji);
                     });
                 });
+
+                // Слушаем изменения в поле сообщения
+                messageInput.addEventListener('input', updateGenerateButtonState);
             }
 
             // --- События ---
@@ -801,7 +838,7 @@
             copyBtn.addEventListener('click', copyLink);
             goToCardBtn.addEventListener('click', goToCard);
             backToCreatorBtn.addEventListener('click', backToCreator);
-            //retakePhotoBtn.addEventListener('click', retakePhoto);
+            viewCardBtn.addEventListener('click', onViewCard);
 
             // Старт
             init();
