--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             background: linear-gradient(145deg, #f9f3e6 0%, #ffe9ce 100%);
             min-height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             padding: 20px;
@@ -34,6 +35,7 @@
             box-shadow: 0 20px 40px rgba(0,0,0,0.2), 0 4px 12px rgba(0,0,0,0.1);
             padding: 30px 25px;
             transition: all 0.2s;
+            margin-bottom: 30px; /* Добавил отступ снизу, чтобы контент не прилипал к футеру */
         }
         h1, h2 {
             font-weight: 500;
@@ -389,6 +391,49 @@
         .preserve-lines {
             white-space: pre-wrap;
         }
+
+        /* Новые стили для подвала (footer) - теперь он статичный */
+        .site-footer {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-top: auto; /* Помогает прижать футер к низу, если контента мало, но с учетом padding на body */
+        }
+
+        .footer-content {
+            background: rgba(255, 255, 255, 0.7);
+            backdrop-filter: blur(8px);
+            padding: 10px 20px;
+            border-radius: 40px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+            font-size: 0.9rem;
+            color: #5a3e28;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            pointer-events: auto;
+            transition: 0.3s;
+        }
+
+        .footer-content:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 12px 25px rgba(0,0,0,0.2);
+        }
+
+        .github-link {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            text-decoration: none;
+            color: #4a2f1a;
+            font-weight: 600;
+            transition: 0.2s;
+        }
+
+        .github-link:hover {
+            color: #c89f6e;
+            transform: scale(1.05);
+        }
     </style>
 </head>
 <body>
@@ -569,6 +614,30 @@
             <button class="btn secondary" id="backToCreatorBtn">💝 Сделать открытку</button>
         </div>
     </div>
+
+    <footer class="site-footer">
+        <div class="footer-content">
+            <a href="https://github.com/Chumakov123/postcard"
+               target="_blank"
+               rel="noopener noreferrer"
+               class="github-link">
+                <svg height="20" viewBox="0 0 16 16" width="20" fill="currentColor">
+                    <path d="M8 0C3.58 0 0 3.58 0 8a8 8 0 0 0 5.47 7.59c.4.07.55-.17.55-.38
+                    0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13
+                    -.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66
+                    .07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95
+                    0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12
+                    0 0 .67-.21 2.2.82a7.58 7.58 0 0 1 2-.27c.68 0 1.36.09 2 .27
+                    1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12
+                    .51.56.82 1.27.82 2.15
+                    0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48
+                    0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8 8 0 0 0 16 8
+                    c0-4.42-3.58-8-8-8z"/>
+                </svg>
+                GitHub
+            </a>
+        </div>
+    </footer>
 
     <script>
         (function() {
