--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
             margin: 0;
             padding: 0;
         }
+        html {
+            height: 100%;
+        }
         body {
             font-family: 'Segoe UI', Roboto, system-ui, sans-serif;
             background: linear-gradient(145deg, #f9f3e6 0%, #ffe9ce 100%);
-            min-height: 100vh;
+            min-height: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            padding: 12px;
+            padding: 20px;
             position: relative;
         }
         .card {
@@ -36,7 +38,7 @@
             box-shadow: 0 15px 30px rgba(0,0,0,0.15), 0 4px 8px rgba(0,0,0,0.05);
             padding: 20px 18px;
             transition: all 0.2s;
-            margin-bottom: 20px;
+            margin: auto 0; /* Автоматические отступы сверху и снизу для центрирования */
         }
         h1, h2 {
             font-weight: 500;
@@ -398,7 +400,8 @@
             width: 100%;
             display: flex;
             justify-content: center;
-            margin-top: auto;
+            margin-top: 20px;
+            flex-shrink: 0;
         }
 
         .footer-content {
@@ -501,6 +504,12 @@
                 padding: 10px 16px;
                 font-size: 0.9rem;
                 min-width: 160px;
+            }
+        }
+
+        @media (min-height: 800px) {
+            .site-footer {
+                margin-top: auto;
             }
         }
     </style>
@@ -636,7 +645,7 @@
                 <option value="stars">⭐ Звёзды</option>
             </select>
 
-            <label for="music">Ссылка на песню (необязательно)</label>
+            <label for="music">Музыка (ссылка на mp3 файл)</label>
             <input type="url" id="music" placeholder="https://example.com/song.mp3">
 
             <button class="btn" id="generateLink">🔗 Создать открытку</button>
